@@ -1,6 +1,7 @@
 Changes in 3.1.5 :
 - Make sure symlinks work when we create multifile torrents
 - Fix redirect loop when torrent is loaded via url in webgui (173513)
+- Fix infinite recursive loop in scanfolder plugin
 
 Changes in 3.1.4 :
 - Make sure user is properly logged in when handling a torrent post in the webgui
